name:                 write-yourself-a-scheme
version:              0.1.0.0
synopsis:             Based on Haskell tutorial here https://en.wikibooks.org/wiki/Write_Yourself_a_Scheme_in_48_Hours
-- description:
-- license:
-- license-file:
homepage:             https://github.com/relink/write-yourself-a-scheme
author:               Chetan Bhasin
maintainer:           connect@chetanbhasin.com
category:             Tutorial
-- copyright:
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SchemeParser
                        , SchemeEvaluator
  build-depends:       base >= 4.7 && < 5
                        , text
                        , parsec
                        , mtl
  default-language:    Haskell2010


executable scheme
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , write-yourself-a-scheme
  default-language:    Haskell2010

test-suite helloworld-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , write-yourself-a-scheme
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChetanBhasin/write-yourself-a-scheme
